[gd_scene load_steps=10 format=3 uid="uid://b0ebagu0ts5p1"]

[ext_resource type="Script" uid="uid://csubga53p2pr4" path="res://src/ui/Phase1UI.gd" id="1_phase1"]
[ext_resource type="Texture2D" uid="uid://5s07bsbpboi0" path="res://assets/sprites/Phase1UIMockup.png" id="2_tgfdk"]
[ext_resource type="Texture2D" uid="uid://cxuas4sbxepc6" path="res://assets/sprites/PNG/CGB01-grey_XL_rounded_btn.png" id="3_3m56v"]
[ext_resource type="Theme" uid="uid://cnoq1f1rj1b7b" path="res://assets/themes/main_theme.tres" id="4_cnisd"]
[ext_resource type="Texture2D" uid="uid://cry2t8ap7ysoo" path="res://assets/sprites/PNG/CGB01-yellow_L_rounded_btn.png" id="5_cnisd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7p1cq"]
texture = ExtResource("3_3m56v")
texture_margin_left = 36.0
texture_margin_top = 42.9325
texture_margin_right = 34.3817
texture_margin_bottom = 37.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7p1cq"]
color = Color(0.21, 0.21, 0.21, 1)
thickness = 3

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cbvt0"]
texture = ExtResource("5_cnisd")
modulate_color = Color(0, 0.966667, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyooy"]
bg_color = Color(0.9, 0.9, 0.9, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Phase1UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phase1")
metadata/_edit_lock_ = true

[node name="Phase1uiMockup" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.423529)
position = Vector2(361, 574)
scale = Vector2(1.36, 1.4144)
texture = ExtResource("2_tgfdk")
metadata/_edit_lock_ = true

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TopStatusBar" type="Control" parent="MainContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="StatusContainer" type="HBoxContainer" parent="MainContainer/TopStatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="LivesDisplay" type="Label" parent="MainContainer/TopStatusBar/StatusContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "❤️ ❤️ ❤️"

[node name="ScoreDisplay" type="Label" parent="MainContainer/TopStatusBar/StatusContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Score: 0"
horizontal_alignment = 1

[node name="LevelDisplay" type="Label" parent="MainContainer/TopStatusBar/StatusContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "LV.1"
horizontal_alignment = 2

[node name="PatienceBar" type="ProgressBar" parent="MainContainer/TopStatusBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -12.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0

[node name="CustomerArea" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 750)
layout_mode = 2

[node name="CustomerCharacter" type="Control" parent="MainContainer/CustomerArea"]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 180.0

[node name="SpeechBubble" type="Panel" parent="MainContainer/CustomerArea"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -278.0
offset_top = 152.0
offset_right = 277.0
offset_bottom = 679.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7p1cq")

[node name="PremiseChecklist" type="VBoxContainer" parent="MainContainer/CustomerArea/SpeechBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 35.0
offset_right = -35.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderLabel" type="Label" parent="MainContainer/CustomerArea/SpeechBubble/PremiseChecklist"]
layout_mode = 2
theme = ExtResource("4_cnisd")
text = "Premises to reconstruct:"

[node name="PremiseList" type="VBoxContainer" parent="MainContainer/CustomerArea/SpeechBubble/PremiseChecklist"]
layout_mode = 2
size_flags_vertical = 3

[node name="Separator" type="HSeparator" parent="MainContainer/CustomerArea/SpeechBubble/PremiseChecklist"]
layout_mode = 2
theme_override_constants/separation = 18
theme_override_styles/separator = SubResource("StyleBoxLine_7p1cq")

[node name="TargetContainer" type="HBoxContainer" parent="MainContainer/CustomerArea/SpeechBubble/PremiseChecklist"]
layout_mode = 2

[node name="TargetLabel" type="Label" parent="MainContainer/CustomerArea/SpeechBubble/PremiseChecklist/TargetContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.906, 0.298, 0.235, 1)
text = "TARGET:  "

[node name="TargetExpression" type="Label" parent="MainContainer/CustomerArea/SpeechBubble/PremiseChecklist/TargetContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.906, 0.298, 0.235, 1)
text = "R"

[node name="InputSystem" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Panel" type="Panel" parent="MainContainer/InputSystem"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.162
anchor_right = 0.501
anchor_bottom = 0.162
offset_left = -293.608
offset_top = -57.96
offset_right = 293.392
offset_bottom = 58.04
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cbvt0")

[node name="InputContainer" type="VBoxContainer" parent="MainContainer/InputSystem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -24.0
offset_right = -60.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputLabel" type="Label" parent="MainContainer/InputSystem/InputContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Input:"
horizontal_alignment = 1

[node name="InputField" type="Panel" parent="MainContainer/InputSystem/InputContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kyooy")

[node name="InputDisplay" type="Label" parent="MainContainer/InputSystem/InputContainer/InputField"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.498, 0.549, 0.553, 1)
text = "Type your premise here..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="VirtualKeyboard" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2

[node name="VariableRow" type="HBoxContainer" parent="MainContainer/VirtualKeyboard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_right = 0.501
offset_left = -232.68
offset_right = 232.32
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VarP" type="Button" parent="MainContainer/VirtualKeyboard/VariableRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "P"

[node name="VarQ" type="Button" parent="MainContainer/VirtualKeyboard/VariableRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Q"

[node name="VarR" type="Button" parent="MainContainer/VirtualKeyboard/VariableRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "R"

[node name="VarS" type="Button" parent="MainContainer/VirtualKeyboard/VariableRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "S"

[node name="VarT" type="Button" parent="MainContainer/VirtualKeyboard/VariableRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "T"

[node name="OperatorRow" type="HBoxContainer" parent="MainContainer/VirtualKeyboard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -194.0
offset_top = 98.0
offset_right = 188.0
offset_bottom = 193.0
grow_horizontal = 2

[node name="AndButton" type="Button" parent="MainContainer/VirtualKeyboard/OperatorRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "∧"

[node name="XorButton" type="Button" parent="MainContainer/VirtualKeyboard/OperatorRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "⊕"

[node name="BiconditionalButton" type="Button" parent="MainContainer/VirtualKeyboard/OperatorRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "↔"

[node name="OrButton" type="Button" parent="MainContainer/VirtualKeyboard/OperatorRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "∨"

[node name="MixedRow" type="HBoxContainer" parent="MainContainer/VirtualKeyboard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.0
offset_top = 197.0
offset_right = 228.0
offset_bottom = 292.0
grow_horizontal = 2

[node name="ImpliesButton" type="Button" parent="MainContainer/VirtualKeyboard/MixedRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "→"

[node name="OpenParenButton" type="Button" parent="MainContainer/VirtualKeyboard/MixedRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "("

[node name="CloseParenButton" type="Button" parent="MainContainer/VirtualKeyboard/MixedRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = ")"

[node name="NotButton" type="Button" parent="MainContainer/VirtualKeyboard/MixedRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "¬"

[node name="BackspaceButton" type="Button" parent="MainContainer/VirtualKeyboard/MixedRow"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "⌫"

[node name="ActionButtons" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/ActionButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 2.467
anchor_right = 0.5
anchor_bottom = 2.467
offset_left = -351.0
offset_top = -102.02
offset_right = 355.0
offset_bottom = -11.02
grow_horizontal = 2

[node name="ClearButton" type="Button" parent="MainContainer/ActionButtons/ButtonContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "CLEAR"

[node name="SubmitButton" type="Button" parent="MainContainer/ActionButtons/ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "SUBMIT"
